--- a/src/Pages/stocks/stocks.css
+++ b/src/Pages/stocks/stocks.css
@@ -1,7 +1,152 @@
-/* #stocks {
-    background-color: #FFC600;
+.main-pa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
 }
 
-#stocks a {
-    color: #000000;
-} */
+/*  ⇩⇩⇩⇩⇩⇩⇩⇩⇩ CIMA ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  */
+.container-cima-pa {
+  margin: 3vh 0px 0px 320px;
+  width: 60%;
+  height: 40vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.indice-preco {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 470px;
+  margin: 50px 0 30px 0;
+}
+
+.nasdaq-logo {
+  width: 190px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.sub-titulo-nasdaq {
+  font-weight: 700;
+  font-size: 21px;
+  margin: 10px 0;
+}
+
+.texto-nasdaq {
+  font-weight: 400;
+  font-size: 20px;
+  width: 33vw;
+  height: 10vh;
+  text-align: justify;
+}
+
+.indice-nasdaq {
+  font-weight: 500;
+  font-size: 24px;
+  margin: 9px 0px 0px 0px;
+}
+
+.variation-nasdaq {
+  font-weight: 400;
+  font-size: 20px;
+  font-size: 18px;
+  color: red;
+  margin: 9px 0px 0px 0px;
+}
+
+/*  ⇩⇩⇩⇩⇩⇩⇩⇩⇩ BAIXO ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  */
+.container-baixo-pa {
+  margin: 20px 0px 3vh 320px;
+  width: 80vw;
+  height: 60vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: column;
+}
+
+.stock {
+  color: #ffffffd0;
+  box-sizing: border-box;
+  width: 210px;
+  height: 130px;
+  top: 385px;
+  background: #080c2b;
+  border: 1px solid #ffffff;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: row;
+  padding: 9px 15px 20px 15px;
+  margin: 0px 2px 20px 2px;
+}
+
+.stock:hover {
+  border: 1px solid #e0e0e0;
+  transition: all 0.2s;
+  color: rgb(255, 255, 255);
+  background: #0c103a;
+  transform: scale(1.2);
+  cursor: pointer;
+  filter: drop-shadow(10px 10px 5px rgba(0, 0, 0, 0.5));
+}
+
+.stock-esquerda {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 70%;
+}
+
+.stock-symbol {
+  font-size: 19px;
+  margin-bottom: 2px;
+}
+
+.stock-name {
+  font-size: 19px;
+  margin-bottom: 8px;
+}
+
+.img-stock {
+  margin-top: 3px;
+  width: 70px;
+  height: 70px;
+}
+
+.stock-num {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.stock-div-price {
+  font-size: 20px;
+}
+
+.gain-variation1 {
+  display: flex;
+  color: green;
+}
+
+.gain-variation2 {
+  display: flex;
+  color: red;
+}
+
+.stock-div-gain {
+  margin-right: 10px;
+}
