--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,3 +1,6 @@
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MAIN  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .main-home {
   display: flex;
   justify-content: flex-start;
@@ -7,16 +10,29 @@
   flex-direction: column;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  CIMA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-cima {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 80vw;
-  height: 35vh;
-  margin: 0px 0px 10px 345px;
-  background-color: #aaaaaa;
+  width: 71.5vw;
+  height: 32vh;
+  margin: 30px 0px 0px 430px;
+  background: #b6b6b6b3;
+  border-radius: 15px;
 }
 
+#area-chart-home {
+  margin: 10px 0px 0px 15px;
+  width: 100%;
+  height: 100%;
+}
+
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio {
   display: flex;
   justify-content: flex-start;
@@ -26,33 +42,41 @@
   margin: 10px 0px 10px 345px;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO ESQUERDA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio-esquerda {
   padding-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
-  width: 40%;
+  width: 30%;
+  margin: 5px 0px 0px 80px;
 }
 
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO DIREITA ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-meio-direita {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  height: 100%;
-  width: 60%;
-  background-color: #aaaa8e;
-}
-
-.container-baixo {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80vw;
-  height: 26vh;
-  margin: 10px 0px 0px 345px;
+  height: 90%;
+  width: 57.7%;
+  background: #0c103a;
+  margin: 20px 0px 0px 30px;
+  border-radius: 15px;
 }
 
+#area-chart2-home {
+  margin: 00px 0px 0px 20px;
+  width: 100%;
+  height: 100%;
+}
+ {
+  /*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  BAIXO ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+}
 .container-baixo {
   display: flex;
   justify-content: center;
@@ -116,7 +140,7 @@
   font-weight: 600;
   color: #ffffff;
   text-align: justify;
-  text-shadow: rgb(206, 205, 161) 0.1em 0.1em 0.3em;
+  text-shadow: rgb(235, 234, 225) 0.1em 0.1em 0.3em;
 }
 
 .carousel-inner {
