--- a/src/pages/add-investment/add-investment.css
+++ b/src/pages/add-investment/add-investment.css
@@ -1,41 +1,53 @@
-.main-add-investment{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
+.main-add-investment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.investment-options {
-    padding: 20px;
-    margin:0px 0px 0px 320px;
-    width: 40vw;
-    height: 72vh;
-    display: flex;
-    justify-content:flex-start;
-    align-items:flex-start;
-    background: #b2b2b2a2;
-    border:none;
-    /* border-radius: 15px; */
-    outline: none;
-    flex-direction: row; 
+.container-ai {
+  margin: 0px 0px 0px 320px;
+  width: 40vw;
+  height: 72vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background: #b2b2b2a2;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: row;
 }
 
-.investment-options > button{
-    color: #ffffff;
-    width: 50%;
-    padding: 16px 0px;
-    margin:20px 10px 0px 10px;
-    border:none;
-    /* border-radius: 10px; */
-    outline: none;
-    font-size: 13pt;
-    background: #000000;
-    font-weight: 800;
-    cursor: pointer;
+.card {
+  width: 13vw;
+  height: 40vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background: #b2b2b2a2;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: row;
 }
 
-.investment-options > button:hover{
-    background-color: #FFC600;
-    color: #000000;
+.investment-options > button {
+  color: #ffffff;
+  width: 50%;
+  padding: 16px 0px;
+  margin: 20px 10px 0px 10px;
+  border: none;
+  /* border-radius: 10px; */
+  outline: none;
+  font-size: 13pt;
+  background: #000000;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.investment-options > button:hover {
+  background-color: #ffc600;
+  color: #000000;
 }
