--- a/src/pages/add-investment/add-investment.css
+++ b/src/pages/add-investment/add-investment.css
@@ -2,17 +2,39 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
 }
 
+.h1-add-invest {
+  width: auto;
+  padding-left: 16vw;
+  margin-bottom: 40px;
+  font-size: 41px;
+  font-weight: 500;
+}
+
 .container-ai {
   margin: 0px 0px 0px 320px;
-  width: 40vw;
-  height: 72vh;
+  width: 45vw;
+  height: 75vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: row;
+  padding-top: 50px;
+}
+
+.card {
+  width: 14vw;
+  min-height: 560px;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   background: #b2b2b2a2;
   border: none;
   border-radius: 15px;
@@ -20,17 +42,28 @@
   flex-direction: row;
 }
 
-.card {
-  width: 13vw;
-  height: 40vh;
+.card-img-top {
+  width: 250px;
+  height: 160px;
+}
+
+.card-title {
+  margin: 10px 0px;
+  font-size: 23px;
+  font-weight: 500;
+}
+
+.card-body {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  background: #b2b2b2a2;
-  border: none;
-  border-radius: 15px;
-  outline: none;
-  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.card-text {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 17px;
 }
 
 .investment-options > button {
