--- a/src/pages/simulate-investment/simulate.css
+++ b/src/pages/simulate-investment/simulate.css
@@ -1,68 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .main-si {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .container-si {
-    margin: 0px 0px 0px 320px;
-    width: 40vw;
-    height: 72vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background: #d9d9d9b3;
-    border: none;
-    outline: none;
-    flex-direction: column;
+  margin: 0px 0px 0px 320px;
+  width: 40vw;
+  height: 72vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background: #d9d9d9b3;
+  border: none;
+  outline: none;
+  flex-direction: column;
 }
 
 .h3-si {
-    padding: 1vw;
-    font-size: 2.1em;
-    font-weight: 700;
-}
-
-.texto-e-input-si-first {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 2vh;
-}
-
-.texto-e-input-si-first>input {
-    width: 100%;
-    padding: 0.7vh;
-    outline: none;
+  padding: 60px 0px 40px 0;
+  font-size: 2.1em;
+  font-weight: 700;
+  margin: 0 15px 0 0;
 }
 
 .texto-e-input-si {
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 2vh;
-}
-
-#aporteperiodico,
-#taxajuros,
-#taxainflacao,
-#saque-periodico,
-#tempo {
-    width: 70%;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0px 0px 2vh 21%;
 }
 
 #aporteperiodico,
@@ -71,68 +48,42 @@
 #saque-periodico,
 #tempo,
 #valorinvestido {
-    border: none;
+  width: 70%;
+  border: none;
 }
-
-#aporteperiodico1,
-#taxajuros1,
-#taxainflacao1,
-#saque-periodico1,
-#tempo1 {
-    width: 17px;
-    height: 17px;
-    margin: 0px 4px 0px 15px;
-}
-
-.dois-checkbox {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: row;
-}
-
 
 .checkbox-e-texto-si {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: row;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
 }
 
-.checkbox-e-texto-si>input {
-    padding: 0.7vh;
-    outline: none;
+.checkbox-e-texto-si > input {
+  padding: 0.7vh;
+  outline: none;
 }
-
-
-.checkbox-si {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-}
-
-
-
-
-
-
-
-
-
 
 .botao-calcular {
-    width: 45%;
-    padding: 14px 0px;
-    margin-top: 2vh;
-    border: none;
-    border-radius: 10px;
-    outline: none;
-    font-size: 13pt;
-    background: #fce91b;
-    font-weight: 800;
-    cursor: pointer;
+  width: 50%;
+  padding: 14px 0px;
+  margin-top: 4vh;
+  border: none;
+  border-radius: 10px;
+  outline: none;
+  font-size: 13pt;
+  background: #fce91b;
+  font-weight: 800;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.h3-por-ano {
+  border-radius: 10px;
+  border: 2px solid;
+  padding: 5px;
+  font-size: 15px;
+  text-align: center;
+  margin: 0 0 0 30px;
 }
