--- a/src/pages/news/news.css
+++ b/src/pages/news/news.css
@@ -1,76 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap");
 
 * {
-    font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .container-news {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .news-h3 {
-    margin: 6vh 0 3vh 6vw;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 800;
+  margin: 6vh 0 3vh 6vw;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
 }
 
 .single-news {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .news {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    flex-direction: column;
-    margin-left: 8vw;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 8vw;
 }
 
 .single-news {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    width: 65%;
-    background-color: rgba(234, 234, 234, 0.531);
-    border: 1px solid rgb(216, 214, 214);
-    padding: 1vw;
-    margin: 0.6vw;
-    transition: transform .2s;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 65%;
+  background-color: rgba(234, 234, 234, 0.531);
+  border: 1px solid rgb(216, 214, 214);
+  padding: 1vw;
+  margin: 0.6vw;
+  transition: transform 0.2s;
 }
 
-.single-news:nth-child(1){
-    margin-top: 3vw;
+.single-news:nth-child(1) {
+  margin-top: 3vw;
 }
 
 .single-news:hover {
-    background-color: #00000021;
-    font-weight: 600;
-    color: #a8821ad0;
-    transform: scale(1.1);
+  background-color: #0000002d;
+  font-weight: 600;
+  color: #0b1444;
+  text-shadow: rgb(248, 248, 248) 0.1em 0.1em 0.3em;
+  transform: scale(1.1);
 }
 
 .img-news {
-    width: 20vw;
-    height: 25vh;
+  width: 20vw;
+  height: 25vh;
 }
 
 .text {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    margin: 1em 0 0 1em;
+  text-align: justify;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin: 1em 0 0 1em;
 }
 
 .news-title {
-    font-weight: 700;
-    font-size: 30px;
+  font-weight: 700;
+  font-size: 30px;
 }
 
 .news-subtitle {
-    font-size: 20px;
-    margin: .5em 0 0 1em;
+  font-size: 20px;
 }
