--- a/src/pages/simulate-investment/simulate.css
+++ b/src/pages/simulate-investment/simulate.css
@@ -43,6 +43,12 @@
   margin: 0px 0px 2vh 21%;
 }
 
+.texto-e-input-si > label {
+  font-size: 1.1em;
+  font-weight: 400;
+  text-shadow: rgb(179, 179, 179) 0.1em 0.1em 0.3em;
+}
+
 #aporteperiodico,
 #taxajuros,
 #taxainflacao,
