--- a/src/Pages/add-investment/add-investment.css
+++ b/src/Pages/add-investment/add-investment.css
@@ -1,68 +1,86 @@
 .main-add-investment {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    width: 100vw;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 }
 
-.investment-options {
-    padding: 20px;
-    margin: 0px 0px 0px 14%;
-    width: 40vw;
-    height: 72vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    background: #b2b2b2a2;
-    border: none;
-    outline: none;
-    flex-direction: column;
+.h1-add-invest {
+  width: auto;
+  padding-left: 16vw;
+  margin-bottom: 40px;
+  font-size: 41px;
+  font-weight: 500;
 }
 
-.investment-options>button {
-    color: #ffffff;
-    width: 50%;
-    padding: 26px 0px;
-    margin: 20px 10px 0px 10px;
-    border: none;
-    outline: none;
-    font-size: 20pt;
-    background: #000000;
-    font-weight: 800;
-    cursor: pointer;
-    border-radius: 0;
+.container-ai {
+  margin: 0px 0px 0px 320px;
+  width: 45vw;
+  height: 75vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: row;
+  padding-top: 50px;
 }
 
-.investment-options>button:hover {
-    background-color: #FFC600;
-    color: #000000;
+.card {
+  width: 14vw;
+  min-height: 560px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background: #b2b2b2a2;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  flex-direction: row;
 }
 
-.title-investment {
-    font-size: 30pt;
-    color:#ffffff;
-    padding: 20px 0;
-    background-color: #606060;
-    text-align: center;
-    font-style: italic;
-    font-weight: 800;
-    width: 100%;
+.card-img-top {
+  width: 250px;
+  height: 160px;
 }
 
-.modal-header, .modal-footer {
-    background-color: #d9d9d9b3;
-    font-size: 25pt;
+.card-title {
+  margin: 10px 0px;
+  font-size: 23px;
+  font-weight: 500;
 }
 
-.texto-auxiliar {
-    display: none;
+.card-body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-#tooltip-rf,
-#tooltip-cc,
-#tooltip-acao {
-    margin-left: 10px;
-    margin-top: 50px;
+.card-text {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 17px;
+}
+
+.investment-options > button {
+  color: #ffffff;
+  width: 50%;
+  padding: 16px 0px;
+  margin: 20px 10px 0px 10px;
+  border: none;
+  /* border-radius: 10px; */
+  outline: none;
+  font-size: 13pt;
+  background: #000000;
+  font-weight: 800;
+  cursor: pointer;
+}
+
+.investment-options > button:hover {
+  background-color: #ffc600;
+  color: #000000;
 }
