--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -1,58 +1,145 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap");
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MAIN  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+
 .main-home {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100vw;
+  height: 100vh;
+  flex-direction: column;
 }
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  CIMA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 
 .container-cima {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 35vh;
-    margin: 0px 0px 10px 345px;
-    /* background-color:#aaaaaa; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 71.5vw;
+  height: 32vh;
+  margin: 30px 0px 0px 430px;
+  background: #ffffffc4;
 }
+
+#area-chart-home {
+  margin: 10px 0px 0px 15px;
+  width: 100%;
+  height: 100%;
+}
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 
 .container-meio {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 80vw;
-    height: 32vh;
-    margin: 10px 0px 10px 345px;
-    background-color: #aaaaaa;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 80vw;
+  height: 32vh;
+  margin: 10px 0px 10px 345px;
 }
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO ESQUERDA  ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 
 .container-meio-esquerda {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100%;
-    width: 40%;
-    background-color: #64979e;
-
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 30%;
+  margin: 5px 0px 0px 80px;
 }
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  MEIO DIREITA ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
 
 .container-meio-direita {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    height: 100%;
-    width: 60%;
-    background-color: #aaaa8e;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+  width: 57.7%;
+  background: #050525;
+  margin: 20px 0px 0px 30px;
+  border-radius: 15px;
 }
 
+#area-chart2-home {
+  margin: 00px 0px 0px 20px;
+  width: 100%;
+  height: 100%;
+}
+
+/*/⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩  BAIXO ⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩⇩*/
+
 .container-baixo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 26vh;
-    margin: 10px 0px 0px 345px;
-    background-color: #aaaaaa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 27vh;
+  margin: 10px 0px 0px 345px;
+}
+
+.carousel-item {
+  width: 100%;
+  height: 100%;
+}
+
+.single-news-home {
+  text-decoration: none;
+  background: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin-left: 10px;
+}
+
+.carousel-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+}
+
+.image-home {
+  margin-left: 130px;
+  margin-right: 30px;
+  width: 62%;
+  height: 100%;
+}
+
+.img-news-home {
+  mask-image: linear-gradient(to left, #00000000, #000000, #000000, #00000000);
+  width: 100%;
+  height: 100%;
+}
+
+.text-home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  width: 50%;
+  height: 100%;
+  padding-right: 12%;
+}
+
+.news-title-home {
+  font-family: "Roboto Slab", serif;
+  height: auto;
+  width: auto;
+  font-size: 30px;
+  font-weight: 600;
+  color: #ffffff;
+  text-align: center;
+}
+
+.carousel-inner {
+  width: 100%;
+  height: 100%;
 }
